--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "cheerio": "^0.19.0",
+    "evernote": "^1.25.4",
     "request": "^2.55.0"
   }
 }
