--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "async": "^0.9.0",
     "cheerio": "^0.19.0",
     "evernote": "^1.25.4",
+    "mime": "^1.3.4",
     "request": "^2.55.0"
   }
 }
