--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cheerio": "^0.19.0",
     "evernote": "^1.25.4",
     "mime": "^1.3.4",
+    "mongoose": "^4.0.2",
     "request": "^2.55.0"
   }
 }
