--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "evernote": "^1.25.4",
     "mime": "^1.3.4",
     "mongoose": "^4.0.2",
+    "nodemailer": "^1.3.4",
     "request": "^2.55.0"
   }
 }
